--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             </aside>
             <section>
                 <article>
-                    contenido 1
+                    <p>Aqui se escribe el primer cambio</p>
                 </article>
                 <article>
-                    contenido 2
+                    <p>Aqui se escribe el segundo cambio en git</p>
                 </article>
                 <article>
                     contenido 3
