--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <p>Aqui se escribe el segundo cambio en git</p>
                 </article>
                 <article>
-                    contenido 3
+                    <p>Aqui se escribe el tercer cambio de commit</p>
                 </article>
             </section>
         </main>
