--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <nav>
             <div class="menu">enlace 1</div>
             <div class="menu">enlace 2</div>
+            <div class="menu">enlace 3</div>
             
         </nav>
         <main>
