--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <aside>
                 <label class="item-aside">tema 1 </label>
                 <label class="item-aside">tema 2 </label>
-                
+                <label class="item-aside">tema 3 </label>
             </aside>
             <section>
                 <article>
