--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <p>Aqui se escribe el primer cambio</p>
                 </article>
                 <article>
-                    <p>Aqui se escribe el segundo cambio en git</p>
+                    <p>Aqui se escribe el segundo cambio en git por que si </p>
                 </article>
                 <article>
                     <p>Aqui se escribe el tercer cambio de commit</p>
