--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </aside>
             <section>
                 <article>
-                    <p>Aqui se escribe el primer cambio</p>
+                    <p>Aqui se escribe el primer cambio *</p>
                 </article>
                 <article>
                     <p>Aqui se escribe el segundo cambio en git por que si </p>
